--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ scikit-learn==1.6.1
 streamlit==1.43.2
 streamlit-drawable-canvas==0.9.3
 matplotlib==3.10.1
-opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
